附近搜索，好友，推荐关注，粉丝黑名单通信关联加入（黑名单运行报错）

--- a/res/layout/my_chongzhifangshi.xml
+++ b/res/layout/my_chongzhifangshi.xml
@@ -189,9 +189,10 @@
                     android:id="@+id/textView12"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="仅支持&quot;支付宝&quot;支付"
                     android:textColor="@color/color_4"
-            android:textSize="@dimen/new_size_3"
-                    android:text="仅支持宝支付" />
+                    android:textSize="@dimen/new_size_3" />
+
             </LinearLayout>
 
             <ImageView
