--- a/res/layout/near_list_item.xml
+++ b/res/layout/near_list_item.xml
@@ -36,9 +36,8 @@
 
             <TextView
                 android:id="@+id/tvonlinetime"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:text="北京/2分钟前"
                 android:gravity="right"
                 android:textColor="@color/color_4"
