--- a/res/layout/dynamic_list_item.xml
+++ b/res/layout/dynamic_list_item.xml
@@ -76,27 +76,13 @@
             android:textColor="@color/color_2"
             android:textSize="@dimen/new_size_2" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
 
-            <ImageView
-                android:id="@+id/iv_dynamic_test"
-                android:layout_width="60dip"
-                android:layout_height="60dip"
-                android:src="@drawable/d3_52" />
-
-            <com.timetalent.client.ui.view.HorizontalListView
-                android:id="@+id/hl_dynamic"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp" >
-            </com.timetalent.client.ui.view.HorizontalListView>
-
-        </LinearLayout>
-
-
+        
+         <com.timetalent.client.ui.view.HorizontalListView
+                    android:id="@+id/hlv_dynamic_pic"
+                    android:layout_width="match_parent"
+                    android:layout_height="60dp" >
+                </com.timetalent.client.ui.view.HorizontalListView>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
