--- a/res/layout/dynamic_add_info.xml
+++ b/res/layout/dynamic_add_info.xml
@@ -40,20 +40,30 @@
 		    android:layout_marginTop="20dp"
 		    android:background="@color/white"
 		    android:orientation="vertical" >
+                
+		    
+		    <GridView
+                android:id="@+id/gv_dynamic_add"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fadingEdge="none"
+                android:gravity="center"
+                android:horizontalSpacing="2dp"
+                android:listSelector="@android:color/transparent"
+                android:numColumns="4"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
+                android:scrollbars="none"
+                android:scrollingCache="true"
+                android:stretchMode="columnWidth"
+                android:verticalSpacing="2dp"
+                android:visibility="visible" />
 
 			<LinearLayout
 			    android:layout_width="match_parent"
 			    android:layout_height="wrap_content"
 			    android:layout_marginTop="20dp"
 			    android:padding="20dp" >
-
-			    <ImageView
-			        android:id="@+id/imageView1"
-			        android:layout_width="wrap_content"
-			        android:layout_height="wrap_content"
-			        android:layout_marginLeft="10dp"
-			        android:layout_marginRight="10dp"
-			        android:src="@drawable/d10_16" />
 
 			    <ImageView
 			        android:id="@+id/iv_dynamic_add"
