--- a/res/layout/near_fansxiangqingmobanhead.xml
+++ b/res/layout/near_fansxiangqingmobanhead.xml
@@ -101,7 +101,7 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/tvxingzuo"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
@@ -117,7 +117,7 @@
                     android:src="@drawable/f10_33" />
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/tvdizhi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="北京"
@@ -245,42 +245,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="5dp"
-                    android:layout_marginTop="5dp" >
-
-                    <TextView
-                        android:id="@+id/TextView07"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="身高"
-                        android:textColor="@color/color_2"
-                    android:textSize="@dimen/new_size_3" />
-
-                    <LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/dimen_other_xlarge"
-                        android:layout_weight="1"
-                        android:orientation="vertical" >
-
-                        <TextView
-                            android:id="@+id/TextView08"
-                            style="@style/main_color3_style"
-                            android:text="172cm" />
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="1dp"
-                            android:layout_marginRight="10dp"
-                            android:layout_marginTop="10dp"
-                            android:background="@color/spilt_line_color"
-                            android:orientation="vertical" >
-                        </LinearLayout>
-                    </LinearLayout>
-                </LinearLayout>
-<LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="5dp"
                     android:layout_marginTop="12dp" >
 
                     <TextView
@@ -299,7 +263,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/TextView20"
+                            android:id="@+id/tvname"
                             style="@style/main_color3_style"
                             android:text="吴沐熙" />
 
@@ -335,7 +299,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/TextView18"
+                            android:id="@+id/tvnickname"
                             style="@style/main_color3_style"
                             android:text="Vicky" />
 
@@ -371,7 +335,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/TextView16"
+                            android:id="@+id/tvage"
                             style="@style/main_color3_style"
                             android:text="25" />
 
@@ -407,7 +371,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/TextView14"
+                            android:id="@+id/tvxingzuo1"
                             style="@style/main_color3_style"
                             android:text="双子座" />
 
@@ -443,7 +407,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/TextView12"
+                            android:id="@+id/tvzhiye"
                             style="@style/main_color3_style"
                             android:text="演员" />
 
@@ -479,9 +443,45 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/TextView10"
+                            android:id="@+id/tvjiaxiang"
                             style="@style/main_color3_style"
                             android:text="湖南省阮江市" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_marginTop="10dp"
+                            android:background="@color/spilt_line_color"
+                            android:orientation="vertical" >
+                        </LinearLayout>
+                    </LinearLayout>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginTop="5dp" >
+
+                    <TextView
+                        android:id="@+id/TextView07"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="身高"
+                        android:textColor="@color/color_2"
+                    android:textSize="@dimen/new_size_3" />
+
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/dimen_other_xlarge"
+                        android:layout_weight="1"
+                        android:orientation="vertical" >
+
+                        <TextView
+                            android:id="@+id/tvheight"
+                            style="@style/main_color3_style"
+                            android:text="172cm" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
