--- a/res/layout/my_main_mingxing.xml
+++ b/res/layout/my_main_mingxing.xml
@@ -52,7 +52,7 @@
                             android:gravity="center_vertical" >
 
                             <TextView
-                                android:id="@+id/textView1"
+                                android:id="@+id/tvnickname"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="乱世飞尘"
@@ -88,7 +88,7 @@
                                 android:textColor="@color/color_3" />
 
                             <TextView
-                                android:id="@+id/textView3"
+                                android:id="@+id/tvmoney"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="5dp"
@@ -131,7 +131,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/textView4"
+                            android:id="@+id/tvcounthaoyou"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="226"
@@ -159,7 +159,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/textView6"
+                            android:id="@+id/tvcountpushuser"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="123"
@@ -187,7 +187,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/textView8"
+                            android:id="@+id/tvcountguanzhu"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="145"
@@ -214,7 +214,7 @@
                         android:gravity="center_horizontal"
                         android:orientation="vertical" >
 						<TextView
-                            android:id="@+id/textView10"
+                            android:id="@+id/tvcountfans"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="46"
