--- a/res/layout/near_xingtanxiangqingmobanhead.xml
+++ b/res/layout/near_xingtanxiangqingmobanhead.xml
@@ -103,7 +103,7 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/tvxingzuo"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
@@ -119,7 +119,7 @@
                     android:src="@drawable/f10_33" />
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/tvdizhi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="北京"
@@ -266,7 +266,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/TextView20"
+                            android:id="@+id/tvname"
                             style="@style/main_color3_style"
                             android:text="吴沐熙" />
 
@@ -303,7 +303,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/TextView18"
+                            android:id="@+id/tvnickname"
                             style="@style/main_color3_style"
                             android:text="Vicky" />
 
@@ -340,7 +340,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/TextView16"
+                            android:id="@+id/tvage"
                             style="@style/main_color3_style"
                             android:text="25" />
 
@@ -377,7 +377,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/TextView14"
+                            android:id="@+id/tvxingzuo1"
                             style="@style/main_color3_style"
                             android:text="双子座" />
 
@@ -414,7 +414,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/TextView12"
+                            android:id="@+id/tvzhiye"
                             style="@style/main_color3_style"
                             android:text="演员" />
 
@@ -451,7 +451,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/TextView10"
+                            android:id="@+id/tvjiaxiang"
                             style="@style/main_color3_style"
                             android:text="湖南省阮江市" />
 
@@ -488,7 +488,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/TextView08"
+                            android:id="@+id/tvheight"
                             style="@style/main_color3_style"
                             android:text="172cm" />
 
