--- a/res/layout/chance_list_item.xml
+++ b/res/layout/chance_list_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingTop="10dp"
     android:paddingLeft="5dp"
     android:paddingRight="5dp"
@@ -14,7 +14,7 @@
         android:orientation="vertical" >
 
         <ImageView
-            android:id="@+id/imageView1"
+            android:id="@+id/iv_chance_banner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -31,7 +31,7 @@
             android:layout_marginTop="10dp" >
 
             <TextView
-                android:id="@+id/textView1"
+                android:id="@+id/tv_chance_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
@@ -40,7 +40,7 @@
                 android:textSize="@dimen/new_size_2" />
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/tv_chance_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="false"
