--- a/res/layout/chance_offer_add_item.xml
+++ b/res/layout/chance_offer_add_item.xml
@@ -23,7 +23,7 @@
                 android:text="@string/chance_text6" />
 
             <EditText
-                android:id="@+id/EditText01"
+                android:id="@+id/et_chance_add_job"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -36,7 +36,7 @@
         </LinearLayout>
 
         <EditText
-            android:id="@+id/editText2"
+            android:id="@+id/et_chance_add_job_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
