--- a/res/layout/chance_offer_detail_layout.xml
+++ b/res/layout/chance_offer_detail_layout.xml
@@ -6,10 +6,6 @@
 
     <include layout="@layout/main_top_layout" />
 
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-    </FrameLayout>
 
     <ScrollView
         android:id="@+id/scrollView1"
@@ -17,14 +13,10 @@
         android:layout_height="match_parent"
         android:fillViewport="true" >
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" >
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="30dp"
                 android:orientation="vertical" >
 
                 <include layout="@layout/chance_list_item" />
@@ -42,7 +34,7 @@
                         android:layout_height="wrap_content" >
 
                         <TextView
-                            android:id="@+id/textView1"
+                            android:id="@+id/tv_chance_detail_"
                             style="@style/chance_offer_text_style"
                             android:layout_marginRight="8dp"
                             android:text="@string/chance_text10"
@@ -85,18 +77,6 @@
                         android:text="北京-海淀"
                         android:textColor="@color/main_red"
                         android:textSize="@dimen/new_size_3" />
-
-                    <TextView
-                        android:id="@+id/textView3"
-                        style="@style/chance_offer_text_style"
-                        android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
-                        android:layout_marginRight="10dp"
-                        android:layout_toRightOf="@+id/tv_offer_detail_address"
-                        android:gravity="right"
-                        android:hint="2014年12月16日-2014年12月19日"
-                        android:singleLine="true"
-                        android:textSize="@dimen/new_size_1" />
                 </RelativeLayout>
 
                 <TextView
@@ -108,30 +88,27 @@
                     android:id="@+id/lv_chance_detail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp" >
+                    >
                 </ListView>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:background="@drawable/btn_red"
+                    android:gravity="center"
+                    android:layout_marginTop="20dp"
+                    android:orientation="vertical" >
+
+                    <TextView
+                        android:id="@+id/bt_chance_offer"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:drawableLeft="@drawable/c14_13"
+                        android:text="@string/chance_text16"
+                        android:textColor="@color/main_white"
+                        android:textSize="@dimen/new_size_4" />
+                </LinearLayout>
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_gravity="bottom"
-                android:background="@drawable/btn_red"
-                android:gravity="center"
-                android:orientation="vertical" >
-
-                 <TextView
-                android:id="@+id/bt_chance_offer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/chance_text16"
-                android:drawableLeft="@drawable/c14_13"
-                android:textColor="@color/main_white"
-                android:textSize="@dimen/new_size_4" />
-            </LinearLayout>
-
-           
-        </FrameLayout>
     </ScrollView>
 </LinearLayout>
