--- a/res/layout/my_fansziliaobianjihead.xml
+++ b/res/layout/my_fansziliaobianjihead.xml
@@ -261,10 +261,15 @@
                         android:layout_weight="1"
                         android:orientation="vertical" >
 
-                        <TextView
-                            android:id="@+id/TextView20"
-                            style="@style/main_color3_style"
-                            android:text="吴沐熙" />
+                        <EditText
+                            android:id="@+id/etname"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@null"
+                            android:ems="10"
+                            android:textColor="@color/color_2"
+                            android:textColorHint="@color/color_4"
+                            android:textSize="@dimen/new_size_2" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -298,10 +303,15 @@
                         android:layout_weight="1"
                         android:orientation="vertical" >
 
-                        <TextView
-                            android:id="@+id/TextView18"
-                            style="@style/main_color3_style"
-                            android:text="Vicky" />
+                        <EditText
+                            android:id="@+id/etnickname"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@null"
+                            android:ems="10"
+                            android:textColor="@color/color_2"
+                            android:textColorHint="@color/color_4"
+                            android:textSize="@dimen/new_size_2" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -337,7 +347,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/TextView16"
+                            android:id="@+id/tvage"
                             style="@style/main_color3_style"
                             android:text="25" />
 
@@ -374,7 +384,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/TextView14"
+                            android:id="@+id/tvxingzuo1"
                             style="@style/main_color3_style"
                             android:text="双子座" />
 
@@ -410,10 +420,15 @@
                         android:layout_weight="1"
                         android:orientation="vertical" >
 
-                        <TextView
-                            android:id="@+id/TextView12"
-                            style="@style/main_color3_style"
-                            android:text="演员" />
+                        <EditText
+                            android:id="@+id/etzhiye"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@null"
+                            android:ems="10"
+                            android:textColor="@color/color_2"
+                            android:textColorHint="@color/color_4"
+                            android:textSize="@dimen/new_size_2" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -447,10 +462,15 @@
                         android:layout_weight="1"
                         android:orientation="vertical" >
 
-                        <TextView
-                            android:id="@+id/TextView10"
-                            style="@style/main_color3_style"
-                            android:text="湖南省阮江市" />
+                        <EditText
+                            android:id="@+id/etjiaxiang"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@null"
+                            android:ems="10"
+                            android:textColor="@color/color_2"
+                            android:textColorHint="@color/color_4"
+                            android:textSize="@dimen/new_size_2" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -484,10 +504,15 @@
                         android:layout_weight="1"
                         android:orientation="vertical" >
 
-                        <TextView
-                            android:id="@+id/TextView08"
-                            style="@style/main_color3_style"
-                            android:text="172cm" />
+                        <EditText
+                            android:id="@+id/etheight"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:background="@null"
+                            android:ems="10"
+                            android:textColor="@color/color_2"
+                            android:textColorHint="@color/color_4"
+                            android:textSize="@dimen/new_size_2" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
