--- a/res/layout/my_chongzhi.xml
+++ b/res/layout/my_chongzhi.xml
@@ -109,7 +109,7 @@
             </LinearLayout>
 
             <EditText
-                android:id="@+id/editText1"
+                android:id="@+id/etmoney"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@null"
