--- a/res/layout/my_tixian.xml
+++ b/res/layout/my_tixian.xml
@@ -39,7 +39,7 @@
                         android:text="账号" />
 
                     <EditText
-                        android:id="@+id/editText1"
+                        android:id="@+id/etaccount_num"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
@@ -70,7 +70,7 @@
                         android:text="校验全名" />
 
                     <EditText
-                        android:id="@+id/editText2"
+                        android:id="@+id/etaccount_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
@@ -98,7 +98,7 @@
                         android:text="星币" />
 
                     <EditText
-                        android:id="@+id/editText3"
+                        android:id="@+id/etmoney"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
