--- a/res/layout/my_wallet.xml
+++ b/res/layout/my_wallet.xml
@@ -39,7 +39,7 @@
                     android:gravity="center_vertical" >
 
                     <TextView
-                        android:id="@+id/textView1"
+                        android:id="@+id/tvnickname"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="乱世飞尘"
@@ -69,7 +69,7 @@
                         android:textColor="@color/white" />
 
                     <TextView
-                        android:id="@+id/textView3"
+                        android:id="@+id/tvmoney"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
