--- a/res/layout/my_xingtanziliaomobanhead.xml
+++ b/res/layout/my_xingtanziliaomobanhead.xml
@@ -90,7 +90,7 @@
                         android:src="@drawable/f_05" />
 
                     <TextView
-                        android:id="@+id/textView1"
+                        android:id="@+id/tvage1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
@@ -101,7 +101,7 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/tvxingzuo"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
@@ -117,7 +117,7 @@
                     android:src="@drawable/f10_33" />
 
                 <TextView
-                    android:id="@+id/textView3"
+                    android:id="@+id/tvdizhi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/new_size_2"
@@ -132,7 +132,7 @@
                     android:src="@drawable/f10_36" />
 
                 <TextView
-                    android:id="@+id/textView4"
+                    android:id="@+id/tvtime"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="10dp"
@@ -263,7 +263,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/TextView20"
+                            android:id="@+id/tvname"
                             style="@style/main_color3_style"
                             android:text="吴沐熙" />
 
@@ -300,7 +300,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/TextView18"
+                            android:id="@+id/tvnickname"
                             style="@style/main_color3_style"
                             android:text="Vicky" />
 
@@ -337,7 +337,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/TextView16"
+                            android:id="@+id/tvage"
                             style="@style/main_color3_style"
                             android:text="25" />
 
@@ -374,7 +374,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/TextView14"
+                            android:id="@+id/tvxingzuo1"
                             style="@style/main_color3_style"
                             android:text="双子座" />
 
@@ -411,7 +411,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/TextView12"
+                            android:id="@+id/tvzhiye"
                             style="@style/main_color3_style"
                             android:text="演员" />
 
@@ -448,7 +448,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/TextView10"
+                            android:id="@+id/tvjiaxiang"
                             style="@style/main_color3_style"
                             android:text="湖南省阮江市" />
 
@@ -485,7 +485,7 @@
                         android:orientation="vertical" >
 
                         <TextView
-                            android:id="@+id/TextView08"
+                            android:id="@+id/tvheight"
                             style="@style/main_color3_style"
                             android:text="172cm" />
 
