--- a/res/layout/findpwd_first_layout.xml
+++ b/res/layout/findpwd_first_layout.xml
@@ -28,7 +28,7 @@
                 android:paddingTop="15dp" >
 
                 <AutoCompleteTextView
-                    android:id="@+id/et_username"
+                    android:id="@+id/et_find_pwd_phone"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@null"
@@ -72,7 +72,7 @@
                 android:paddingTop="15dp" >
 
                 <AutoCompleteTextView
-                    android:id="@+id/et_username"
+                    android:id="@+id/et_find_pwd_code"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@null"
