--- a/res/layout/chance_list_item.xml
+++ b/res/layout/chance_list_item.xml
@@ -16,12 +16,12 @@
         <ImageView
             android:id="@+id/iv_chance_banner"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="90dp"
             android:layout_gravity="center"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginTop="5dp"
-            android:background="@drawable/c12_03" />
+            android:src="@drawable/c12_03" />
         
         <RelativeLayout
             android:layout_width="match_parent"
@@ -35,6 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
+                android:layout_centerVertical="true"
                 android:text="今年杨坤20岁演唱会"
                 android:textColor="@color/main_red"
                 android:textSize="@dimen/new_size_2" />
@@ -43,6 +44,7 @@
                 android:id="@+id/tv_chance_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                 android:layout_centerVertical="true"
                 android:layout_alignParentLeft="false"
                 android:layout_alignParentRight="true"
                 android:text="报名截止时间：2104年12月6日"
