--- a/res/layout/dynamic_add_info.xml
+++ b/res/layout/dynamic_add_info.xml
@@ -5,71 +5,84 @@
     android:background="@color/main_grey"
     android:orientation="vertical" >
 	<include layout="@layout/main_top_layout" />
-	
-	 <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:background="@color/white"
-                android:focusable="true"
-                android:orientation="vertical"
-                android:paddingBottom="10dp"
-                android:paddingLeft="20dp"
-                android:paddingTop="15dp" >
 
-                <EditText
-                    android:id="@+id/et_dynamic_add_content"
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:background="@null"
-                    android:focusable="true"
-                    android:hint="@string/dynamic_add_hint"
-                    android:textColorHint="@color/color_4"
-                    android:textSize="@dimen/new_size_3" >
-                    <requestFocus />
-                </EditText>
-            </LinearLayout>
-		<TextView
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/spilt_line_color" />
+<!-- 	<ScrollView
+	    android:id="@+id/scrollView1"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content" >
 
-		<LinearLayout
-		    android:layout_width="match_parent"
-		    android:layout_height="wrap_content"
-		    android:layout_marginTop="20dp"
-		    android:background="@color/white"
-		    android:orientation="vertical" >
-                
-		    
-		    <GridView
-                android:id="@+id/gv_dynamic_add"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:fadingEdge="none"
-                android:gravity="center"
-                android:horizontalSpacing="2dp"
-                android:listSelector="@android:color/transparent"
-                android:numColumns="4"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:scrollbars="none"
-                android:scrollingCache="true"
-                android:stretchMode="columnWidth"
-                android:verticalSpacing="2dp"
-                android:visibility="visible" />
-			<TextView
-			    android:id="@+id/textView1"
-			    android:layout_width="wrap_content"
-			    android:layout_height="wrap_content"
-			    android:layout_marginTop="10dp"
-			    android:layout_marginBottom="10dp"
-			    android:layout_marginLeft="20dp"
-			    android:text="@string/dynamic_add_text"
-			    android:textColor="@color/color_4"
-			    android:textSize="@dimen/new_size_2" />
+	    <LinearLayout
+	        android:layout_width="match_parent"
+	        android:layout_height="match_parent"
+	        android:orientation="vertical" > -->
 
-		</LinearLayout>
+	        <LinearLayout
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_marginTop="20dp"
+	            android:background="@color/white"
+	            android:focusable="true"
+	            android:orientation="vertical"
+	            android:paddingBottom="10dp"
+	            android:paddingLeft="20dp"
+	            android:paddingTop="15dp" >
+
+	            <EditText
+	                android:id="@+id/et_dynamic_add_content"
+	                android:layout_width="match_parent"
+	                android:layout_height="100dp"
+	                android:background="@null"
+	                android:focusable="true"
+	                android:hint="@string/dynamic_add_hint"
+	                android:textColorHint="@color/color_4"
+	                android:textSize="@dimen/new_size_3" />
+	        </LinearLayout>
+
+	        <TextView
+	            android:layout_width="match_parent"
+	            android:layout_height="1dp"
+	            android:background="@color/spilt_line_color" />
+
+	        <LinearLayout
+	            android:layout_width="match_parent"
+	            android:layout_height="wrap_content"
+	            android:layout_marginBottom="20dp"
+	            android:layout_marginTop="20dp"
+	            android:background="@color/white"
+	            android:orientation="vertical" >
+
+	            <GridView
+	                android:id="@+id/gv_dynamic_add"
+	                android:layout_width="match_parent"
+	                android:layout_height="wrap_content"
+	                android:layout_marginTop="15dp"
+	                android:fadingEdge="none"
+	                android:gravity="center"
+	                android:horizontalSpacing="2dp"
+	                android:listSelector="@android:color/transparent"
+	                android:numColumns="4"
+	                android:paddingLeft="5dp"
+	                android:paddingRight="5dp"
+	                android:scrollbars="none"
+	                android:scrollingCache="true"
+	                android:stretchMode="columnWidth"
+	                android:verticalSpacing="2dp"
+	                android:visibility="visible" >
+	            </GridView>
+
+	            <TextView
+	                android:id="@+id/textView1"
+	                android:layout_width="wrap_content"
+	                android:layout_height="wrap_content"
+	                android:layout_marginBottom="10dp"
+	                android:layout_marginLeft="20dp"
+	                android:layout_marginTop="10dp"
+	                android:text="@string/dynamic_add_text"
+	                android:textColor="@color/color_4"
+	                android:textSize="@dimen/new_size_2" />
+	        </LinearLayout>
+<!-- 	    </LinearLayout>
+
+	</ScrollView> -->
 
 </LinearLayout>
